--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest # or macos-latest, windows-latest
     env:
       TEST_URL: http://localhost:3000
+    strategy:
+      matrix:
+        shard: [1, 2, 3, 4, 5, 6]
 
     steps:
       - uses: actions/checkout@v2
@@ -35,4 +38,4 @@ jobs:
         run: yarn
 
       - name: Run test
-        run: yarn test
+        run: yarn test --shard=${{matrix.shard}}/6
