100-workers-shard-with-upload

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -39,3 +39,9 @@ jobs:
 
       - name: Run test
         run: yarn test --shard=${{matrix.shard}}/6
+
+      - name: Upload e2e results
+        uses: actions/upload-artifact@v2
+        with:
+          name: report
+          path: apps/webapp/report.json
