--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: report
-          path: apps/webapp/report.json
+          path: report.json
